# dioxus-wallet-adapter

./: Cargo.toml
programs/dioxus-wallet-adapter/: Cargo.toml  build.rs
programs/solana-client/: Cargo.toml
programs/solana-extra/: Cargo.toml
programs/solana-extra/src/: transaction_status.rs
programs/solana-extra/src/account_decoder/: mod.rs
