[workspace]
members = [
    "programs/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dodecahedr0x"]
description = "A wallet adapter for Dioxus applications"
license = "MIT"
repository = "https://github.com/Dodecahedr0x/dioxus-wallet-adapter"

[workspace.dependencies]
dioxus = { git = "https://github.com/dioxuslabs/dioxus", rev = "ffa36a6", features = ["web"] }
async-std = "1.12.0"
base64 = "0.22.1"
bincode = "1.3.3"
serde = "1"
serde_derive = "1"
serde_json = "1.0.118"
tracing = "0.1.40"
solana-sdk = "~1.18"
thiserror = "1"
