[package]
name = "solana-client-wasm"
version = "1.18.0"
description = "Solana non-blocking WASM RPC client."
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
license = "Apache-2.0"
homepage = "https://beta.solpg.io"
edition = "2021"
keywords = ["solana", "wasm", "client", "rpc", "playground"]
readme = "README.md"

[features]
pubsub = ["js-sys", "web-sys", "wasm-bindgen", "wasm-bindgen-futures"]

[dependencies]
async-trait = "0.1"
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = "0.4"
clap = "3.1.18"
futures = "0.3"
js-sys = { version = "0.3.65", optional = true }
reqwest = { version = "0.11.9", features = ["json"] }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
solana-extra-wasm = { path = "../solana-extra", version = "=1.18.0" }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = { version = "0.2.88", optional = true }
wasm-bindgen-futures = { version = "0.4.38", optional = true }
web-sys = { version = "0.3.65", features = ["MessageEvent", "WebSocket"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.38"
