[package]
name = "solana-extra-wasm"
version = "1.18.0"
description = "Solana WASM compatible utilities."
authors = ["Acheron <acheroncrypto@gmail.com>"]
repository = "https://github.com/solana-playground/solana-playground"
license = "Apache-2.0"
homepage = "https://beta.solpg.io"
edition = "2021"
keywords = ["solana", "playground", "wasm", "extra", "utils"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
Inflector = "0.11"
arrayref = "0.3"
assert_matches = "1"
base64 = { workspace = true }
bincode = { workspace = true }
borsh = "0.10"
bs58 = "0.4"
bytemuck = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = "3"
console = "0.15"
fluvio-wasm-timer = "0.2"
humantime = "2"
lazy_static = "1"
log = "0.4.17"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5"
semver = "1"
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
solana-frozen-abi = "~1.18"
solana-frozen-abi-macro = "~1.18"
solana-sdk = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
rustc_version = "0.4"
